--- a/partials/botd.html
+++ b/partials/botd.html
@@ -10,9 +10,16 @@
         <input class="form-control" ng-model="searchText" placeholder="Search Library...">
 
         <li ng-repeat="book in library | filter: searchText" class="book">
-        <button class="right btn btn-sm btn-primary">Get Reviews</button>
+        <button ng-click="book.getBookInfo()" class="right btn btn-sm btn-primary">Get Reviews</button>
           <span class="title"> {{ book.title }} </span></br>
-          <span> {{ book.author }} </span>  
+          <span> {{ book.author }} </span>
+
+          <div ng-show="book.fetched" class="panel panel-success"> 
+            <img ng-src="{{book.image}}"> </img> </br> 
+            {{ book.description }} 
+            
+          </div>
+
         </li>
       </ul>
     </div>
